adjustment to directions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="button" type="submit">Stuff Doer</button>
-    <button id="color-changer" type="submit">Change the color</button>
+    <button id="secondButton" type="submit">Change the color</button>
     <script src="dom-events.js"></script>
 </body>
 </html>
